code(sql): db agregada

--- a/Segundo parcial/Modulo_NPM/package.json
+++ b/Segundo parcial/Modulo_NPM/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "modulo_npm",
+  "name": "modulo_npm_lanazirot",
   "version": "1.0.0",
   "description": "Modulo que verifica un token",
   "main": "index.js",
