--- a/Segundo parcial/SQL/package.json
+++ b/Segundo parcial/SQL/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "json2xls": "^0.1.2",
     "mssql": "^9.0.1"
   }
 }
