--- a/Tercer parcial/CRUD Swagger/package.json
+++ b/Tercer parcial/CRUD Swagger/package.json
@@ -15,7 +15,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "json2xls": "^0.1.2",
-    "mssql": "^9.0.1"
+    "mssql": "^9.0.1",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.6.0"
   },
   "devDependencies": {
     "prisma": "^4.6.1"
