--- a/Tercer parcial/JSDoc/package.json
+++ b/Tercer parcial/JSDoc/package.json
@@ -11,7 +11,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jsdoc": "^4.0.0",
-    "minami": "^1.2.3"
+    "jsdoc": "^4.0.0"
   }
 }
