--- a/API/package.json
+++ b/API/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha tests/**/*.js"
+    "test": "set NODE_ENV=test&& jest",
+    "test:watch": "set NODE_ENV=test&& jest --watch",
+    "build": "babel src -d dist",
+    "start": "node dist/index.js",
+    "dev": "nodemon --exec babel-node index.js",
+    "lint": "eslint src --ext .js"
   },
   "keywords": [],
   "author": "",
@@ -14,15 +19,15 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsdoc": "^4.0.0",
     "json2xls": "^0.1.2",
     "mssql": "^9.0.1",
     "swagger-jsdoc": "^6.2.5",
     "swagger-ui-express": "^4.6.0"
   },
   "devDependencies": {
-    "chai": "^4.3.7",
-    "chai-http": "^4.3.0",
-    "mocha": "^10.1.0",
-    "prisma": "^4.6.1"
+    "jest": "^29.3.1",
+    "prisma": "^4.6.1",
+    "supertest": "^6.3.1"
   }
 }
