--- a/API/package.json
+++ b/API/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "set NODE_ENV=test&& jest",
     "test:watch": "set NODE_ENV=test&& jest --watch",
-    "docs": "jsdoc -c jsdoc.json" 
+    "docs": "jsdoc -c jsdoc.json"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "joi": "^17.7.0",
     "jsdoc": "^4.0.0",
     "json2xls": "^0.1.2",
