--- a/API/package.json
+++ b/API/package.json
@@ -14,14 +14,16 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.6.1",
+    "cloudinary": "^1.32.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-fileupload": "^1.4.0",
     "joi": "^17.7.0",
     "jsdoc": "^4.0.0",
     "json2xls": "^0.1.2",
     "mssql": "^9.0.1",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "swagger-jsdoc": "^6.2.5",
     "swagger-ui-express": "^4.6.0"
   },
